--- a/DoctorWebASP/DoctorWebASP.csproj
+++ b/DoctorWebASP/DoctorWebASP.csproj
@@ -234,6 +234,7 @@
     <Compile Include="Controllers\NotificacionesController.cs" />
     <Compile Include="Controllers\PersonasController.cs" />
     <Compile Include="Controllers\ReportesController.cs" />
+    <Compile Include="Controllers\Services\IServicioNotificaciones.cs" />
     <Compile Include="getPersonasDS.cs">
       <DependentUpon>getPersonasDS.xsd</DependentUpon>
     </Compile>
@@ -316,10 +317,10 @@
     <Compile Include="Models\Service\ResultadoProceso.cs" />
     <Compile Include="Models\Service\ResultadoServicio.cs" />
     <Compile Include="Models\Service\ResultadoServicioPaginado.cs" />
-    <Compile Include="Models\Service\ResultConstruct.cs" />
     <Compile Include="Models\Tratamiento.cs" />
     <Compile Include="Models\UsoRecurso.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Controllers\Services\ServicioNotificaciones.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\ReportesViewModel.cs" />
   </ItemGroup>
@@ -1362,7 +1363,6 @@
     <Content Include="Views\Calendarios\Edit.cshtml" />
     <Content Include="Views\Calendarios\Index.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Reportes\Configurados.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="fonts\" />
