--- a/DoctorWebASP/Web.config
+++ b/DoctorWebASP/Web.config
@@ -10,13 +10,21 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-DoctorWebASP-20170614091701.mdf;Initial Catalog=aspnet-DoctorWebASP-20170614091701;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DoctorWebBD" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=C:\Users\Elitex\Documents\ProyectoASP\ds2017UcabGit\DoctorWebServiciosWCF\App_Data\DoctorWebBD.mdf;Initial Catalog=DoctorWebBD;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
+  
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="WebServiceUrl" value="http://localhost:53951/" />
+    <!-- STMP Config -->
+    <add key="SMTPFromName" value="DoctorWeb" />
+    <add key="SMTPServerHost" value="smtp.gmail.com" />
+    <add key="SMTPServerPost" value="587" />
+    <add key="SMTPUserId" value="dsucab201617@gmail.com" />
+    <add key="SMTPUserPassword" value="dsucabgroup201617" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
