--- a/DoctorWebServiciosWCF/DoctorWebServiciosWCF.csproj
+++ b/DoctorWebServiciosWCF/DoctorWebServiciosWCF.csproj
@@ -43,11 +43,9 @@
   <ItemGroup>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
-      <Private>True</Private>
     </Reference>
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
-      <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
@@ -70,6 +68,10 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\DoctorWebBD.mdf" />
+    <Content Include="App_Data\DoctorWebBD_log.ldf">
+      <DependentUpon>DoctorWebBD.mdf</DependentUpon>
+    </Content>
     <Content Include="Services\NotificacionService.svc" />
     <Content Include="Services\ReporteService.svc" />
     <Content Include="Web.config" />
@@ -78,9 +80,17 @@
     <Compile Include="Controllers\Helpers\Extensiones.cs" />
     <Compile Include="Controllers\Helpers\Utilidades.cs" />
     <Compile Include="Controllers\ReporteController.cs" />
-    <Compile Include="Migrations\201706220653104_Notificaciones.cs" />
-    <Compile Include="Migrations\201706220653104_Notificaciones.Designer.cs">
-      <DependentUpon>201706220653104_Notificaciones.cs</DependentUpon>
+    <Compile Include="Migrations\201706270010038_Notificaciones.cs" />
+    <Compile Include="Migrations\201706270010038_Notificaciones.Designer.cs">
+      <DependentUpon>201706270010038_Notificaciones.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201706270320204_setup.cs" />
+    <Compile Include="Migrations\201706270320204_setup.Designer.cs">
+      <DependentUpon>201706270320204_setup.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201706270323433_Init.cs.cs" />
+    <Compile Include="Migrations\201706270323433_Init.cs.Designer.cs">
+      <DependentUpon>201706270323433_Init.cs.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Notificacion.cs" />
@@ -100,11 +110,10 @@
       <DependentUpon>ReporteService.svc</DependentUpon>
     </Compile>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="App_Data\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Content Include="packages.config" />
+    <None Include="Properties\PublishProfiles\PublicarEnLocalhostIIS.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -113,9 +122,13 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201706220653104_Notificaciones.resx">
-      <DependentUpon>201706220653104_Notificaciones.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201706270010038_Notificaciones.resx">
+      <DependentUpon>201706270010038_Notificaciones.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201706270320204_setup.resx">
+      <DependentUpon>201706270320204_setup.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201706270323433_Init.cs.resx" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
